@@ -1,5 +1,11 @@
 2009-07-04  Russ Allbery  <rra@stanford.edu>
 
+	* ANSIColor.pm: Add section headings to the DESCRIPTION section of
+	the module since it's getting rather long.
+	(colorstrip): New function to remove ANSI color codes from
+	strings.  Thanks, Paul Miller.
+	* t/basic.t: New tests for colorstrip.
+
 	* ANSIColor.pm (AUTOLOAD): Untaint $AUTOLOAD, required by Perl
 	5.10 when running in taint mode.  Thanks, Tim Bellinghausen.
 	* t/basic.t: Two new tests for AUTOLOAD error handling.  Enable
